--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
     </ul>
     <h2>Other details</h2>
     <ul>
-        <li><a href="./about.html">About ME</a></li>
-        <li><a href="./contact.html">My Contacts</a></li>
+        <li><a href="about.html">About ME</a></li>
+        <li><a href="contact.html">My Contacts</a></li>
     </ul>
     <footer>
         Copyright © 2025 Gnana sasidhar Venigalla. All Rights Reserved.
@@ -43,3 +43,4 @@
 
 </body>
 </html>
+
